--- a/html/new_home.html
+++ b/html/new_home.html
@@ -126,6 +126,29 @@
         <section id="infographics-container" class = "space-container">
           <div id = "inforgraphics-content">
             <h1>Infographics</h1>
+            <div class="row">
+              <div class="column">
+                  <a href="../images/Mythbuster.jpg"><img src="../images/Mythbuster.jpg" alt="Mythbuster infographic" style="width:100%"></a>
+              </div>
+              <div class="column">
+                  <a href="../images/C19INFO.jpg"><img src="../images/C19INFO.jpg" alt="infographic" style="width:100%"></a>
+              </div>
+              <div class="column">
+                  <a href="../images/INFO-CORONA1.jpg"><img src="../images/INFO-CORONA1.jpg" alt="infographic" style="width:100%"></a>
+              </div>
+          </div>
+      
+          <div class="row">
+              <div class="column">
+                  <a href="../images/Masks.jpg"><img src="../images/Masks.jpg" alt="infographic" style="width:100%"></a>
+              </div>
+              <div class="column">
+                  <a href="../images/Gloves.jpg"><img src="../images/Gloves.jpg" alt="infographic" style="width:100%"></a>
+              </div>
+              <div class="column">
+                  <a href="../images/Mythbuster.jpg"><img src="../images/Mythbuster.jpg" alt="infographic" style="width:100%"></a>
+              </div>
+          </div>
           </div>
         </section>
         <!-- Resource Section -->
